# stock-daily-report

./: README.md  pyproject.toml
config/: settings.toml  sp500_symbols.csv  watchlist.csv
input/templates/: 财报总结统一模板.md
scripts/: windows_run.sh
stock_daily_report/: __init__.py  cli.py  config.py  data_sources.py  fisher.py  models.py  pdf_reports.py  poster.py  report.py  scheduler.py
tests/: test_config.py  test_fisher.py  test_pdf_reports.py
